# modern-robotics

./: .gitignore  Makefile  README.md  pyproject.toml
docs/notes/: README.md
src/mr/: __init__.py  linalg.py  rotations.py  se3.py
tests/: test_rotations.py  test_se3.py
tools/: bootstrap_offline.sh  offline_install.sh  verify_offline.py
