[project]
name = "modern-robotics-offline"
version = "0.1.0"
description = "Offline study & exercises for Modern Robotics (Python track)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Abhi Kumar"}]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "jupyter>=1.0",
  "ipykernel>=6.29",
  "sympy>=1.12",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6",
  "black>=24.10",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
exclude = ["vendor/"]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
